--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "moment": "^2.30.1"
   },
   "scripts": {
     "start": "react-scripts start",
